# pyodide-httpx

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: js.pyi
src/pyodide_httpx/: __init__.py  _async.py  _sync.py
src/pyodide_httpx/utils/: sync.py
