[project]
name = "pyodide-httpx"
version = "0.1.1"
description = "patch httpx for using in pyodide"
dependencies = ["httpx>=0.25.1"]
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = ["pyodide-py>=0.26", "ruff>=0.5"]

[tool.pdm.scripts]
fmt = { composite = ["ruff format", "ruff check --fix --show-fixes"] }

[tool.pyright]
reportRedeclaration = false
reportMissingModuleSource = false

[tool.ruff]
line-length = 200

[tool.ruff.lint]
extend-select = [
    "I",    # isort
    "W",    # pycodestyle
    "UP",   # pyupgrade
    "RUF",  # ruff
    "FURB", # refurb
    "C4",   # flake8-comprehensions
    "ARG",  # flake8-unused-arguments
    "PIE",  # flake8-pie
    "PTH",  # flake8-use-pathlib
    "RSE",  # flake8-raise
    "SIM",  # flake8-simplify
]
